--- a/html/detail.html
+++ b/html/detail.html
@@ -5,7 +5,7 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="ja" dir="ltr"> <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>testtest</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="keywords" content="" />
 	<meta name="description" content="">
