--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="ja" dir="ltr"> <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
+	<meta name="image" content="">
 	<?php perch_content('meta'); ?>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <!-- 	<link rel="stylesheet" type="text/css" href="css/style.css" > -->
