--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 <!-- 	<link rel="stylesheet" type="text/css" href="css/style.css" > -->
 	<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 </head>
-<body>
+<body id="">
 	<?php perch_content('login'); ?>
 	<?php perch_content('register'); ?>
 
