--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,7 @@
 	<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 </head>
 <body id="">
+	<p>testtest</p>
 	<?php perch_content('login'); ?>
 	<?php perch_content('register'); ?>
 
