--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
 	<?php perch_content('register'); ?>
 
 <div id="mainmap" style="width: 500px; height: 400px;"></div>
+<p>test</p>
 <perch:before>
 <ul>
 </perch:before>
